2012-03-09  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/time.h: Add suseconds_t and useconds_t here for now.
	* include/sys/time.h: Use suseconds_t when defining struct timeval.

2009-06-03  Ross Younger  <wry@ecoscentric.com>

	* include/sys/stat.h: Include cyg_type.h for __externC

2009-05-12  Simon Kallweit  <simon.kallweit@intefo.ch>

	* include/sys/types.h:
	* include/limits.h:
	Fixed typo in CYGBLD_ISO_SSIZET_HEADER.

2009-02-24  Rutger Hofmman <rutger@cs.vu.nl>

        * include/sys/stat.h: chmod() prototype

2007-01-24  Peter Korsgaard  <peter.korsgaard@barco.com>

	* cdl/isoinfra.cdl:
	* include/fnmatch.h: fnmatch() support.

2006-03-17  Sergei Organov  <osv@javad.com>

	* include/assert.h: Replace #if defined(CYGINT_ISO_EXIT) with #if
	CYGINT_ISO_EXIT. CYGINT_ISO_EXIT configuration variable is always
	defined to either 0 or 1, so check of the former form is always
	evaluated to true.
					 
2005-10-20  Alexander Neundorf <neundorf@kde.org>
	    Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/sys/time.h (new): Basic implementation.
	* include/time.h: Removed timeval which is now in sys/time.h

2005-07-22  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/unistd.h: Const correctness to keep the compiler happy.

2004-03-30  Alex Paulis and Cameron Taylor  <ctaylor@waverider.com>

	* include/sys/select.h: set FD_SETSIZE to CYGNUM_FILEIO_NFD
	when appropriate.

2004-03-12  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/isoinfra.cdl: Typo: CYGBLD_ISO_STDIO_FILEPOS ->
	CYGBLD_ISO_STDIO_FILEPOS_HEADER.

	* include/limits.h: Avoid potential illegal recursion if
	already been included by GCC's limits.h.

	* include/stdio.h: Include stdarg.h to save duplication.
	Give fileno(),fdopen() throw specifiers.

	* include/unistd.h: Prototype for rename() lives in stdio.h.

2004-01-07  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/sys/select.h: Only declare pselect() when posix signals are
	included.

2003-07-15  Andrew Lunn  <andrew.lunn@ascom.ch>
